# Prim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml  ccpp.yml  lint.yml  style.yml
include/: status.h
include/format/elf64/: header.h  ident.h  machine.h  section.h  type.h  types.h
include/format/elf64/header/: header.h  ident.h  machine.h  type.h
include/format/elf64/section/: header.h  type.h
include/platform/: file.h  types.h
libprim/: CMakeLists.txt
libprim/include/: status.h
libprim/include/format/elf64/header/: machine.h
libprim/include/format/elf64/section/: flags.h  string_table.h  type.h
libprim/include/format/elf64/segment/: flags.h  header.h  type.h
libprim/include/platform/: memory.h  types.h
libprim/src/: CMakeLists.txt  status.c
libprim/src/format/: CMakeLists.txt
libprim/src/format/elf64/: CMakeLists.txt
libprim/src/format/elf64/header/: CMakeLists.txt  type.c
libprim/src/format/elf64/section/: CMakeLists.txt  flags.c  header.c  type.c
libprim/src/format/elf64/segment/: CMakeLists.txt  flags.c  header.c  type.c
libprim/src/platform/: CMakeLists.txt  file.c
prim_app/: CMakeLists.txt
prim_app/src/: CMakeLists.txt  main.c
src/: main.c  status.c
src/format/elf64/: header.c  ident.c  machine.c  section.c  type.c
src/format/elf64/header/: header.c  ident.c  machine.c  type.c
src/format/elf64/section/: flags.c  string_table.c  type.c
src/platform/: file.c  memory.c
